--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="images.jpeg" alt="Опис зображення">
         <p>Опис персонажа</p>
     </div>
-
+ <a href="index1.html">Друге завдання</a>
 
 
 
